force-app/main/default/objects/Contract_Option__c/Contract_Option__c.object-meta.xml
<CustomObject>
    <label>Contract Option</label>
    <nameField>
        <label>Options</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>