force-app/main/default/objects/Contract_Option__c/fields/Customer_Contract__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract__c</fullName>
    <label>Customer Contract</label>
    <referenceTo>Customer_Contract__c</referenceTo>
    <relationshipLabel>Member Agencies</relationshipLabel>
    <relationshipName>OptionContract</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>