force-app/main/default/objects/Contract_Option__c/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <formula>Customer_Contract__r.Expiration__c</formula>
    <label>Expiration</label>
    <type>Date</type>
</CustomField>