force-app/main/default/objects/Contract_Option__c/fields/Initial_Qty__c.field-meta.xml
<CustomField>
    <fullName>Initial_Qty__c</fullName>
    <formula>Customer_Contract__r.Initial_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>