force-app/main/default/objects/Contract_Option__c/fields/Member_Agency__c.field-meta.xml
<CustomField>
    <fullName>Member_Agency__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Joint Procurements</relationshipLabel>
    <relationshipName>OptionAccount</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>