force-app/main/default/objects/Contract_Option__c/fields/Member_Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_Contract_Effective_Date__c</fullName>
    <label>Member Contract Effective Date</label>
    <type>Date</type>
</CustomField>