force-app/main/default/objects/Contract_Option__c/fields/Member_Option_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_Option_Expiration_Date__c</fullName>
    <label>Member Option Expiration Date</label>
    <type>Date</type>
</CustomField>