force-app/main/default/objects/Contract_Option__c/fields/Optional_Qty__c.field-meta.xml
<CustomField>
    <fullName>Optional_Qty__c</fullName>
    <formula>Customer_Contract__r.Optional_Quantities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Optional Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>