force-app/main/default/objects/Contract_Option__c/fields/Options_Forecasted__c.field-meta.xml
<CustomField>
    <fullName>Options_Forecasted__c</fullName>
    <label>Options Forecasted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>