force-app/main/default/objects/Contract_Option__c/fields/Options_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Options_Remaining__c</fullName>
    <formula>Quantity__c  - Options_Used__c - Options_Forecasted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Options Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>