force-app/main/default/objects/Contract_Option__c/fields/Options_Used__c.field-meta.xml
<CustomField>
    <fullName>Options_Used__c</fullName>
    <label>Options Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>