force-app/main/default/objects/Contract_Option__c/fields/ReferenceContract__c.field-meta.xml
<CustomField>
    <fullName>ReferenceContract__c</fullName>
    <formula>Customer_Contract__r.Name</formula>
    <label>Reference Contract</label>
    <type>Text</type>
</CustomField>